# basic_app

./: Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: backend.Dockerfile  database.py  entrypoint.sh  init.Dockerfile  logging_config.py  main.py  pyproject.toml  setup.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: Annotation.css  Annotation.js  Home.js  Nav.js  Search.css  Search.js
