[tool.poetry]
name = "prodigy-backend"
version = "0.1.0"
description = ""
authors = ["Marco.Petrella <marco.petrella@ksb.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
pydantic = "^2.9.2"
psycopg2-binary = "^2.9.10"
tenacity = "^9.0.0"
asyncpg = "^0.30.0"
nltk = "^3.9.1"


[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"
